--- CHANGELOG ---
--- PyFMI-FUTURE ---
    * Fixed so FMU `reset` resets to log level that it was loaded with.

--- PyFMI-2.19.0 ---
    * New function `get_log_categories` for `FMUModelBase2` to retrieve both log 
      categories and descriptions, use instead of `get_categories`.
    * Changes to `FMUModelBase2.set_debug_logging()`
      * Now operate on lists of strings instead of bytes.
      * Removed requirement that categories to be set are available via `get_log_categories()`.
    * Added new option `step_size_downsampling_factor` to `Master` algorithm.
      This allows setting reduced input/output update rates on a per-model basis.
    * Enabled use of `result_downsampling_factor` to `Master` algorithm on a per-model basis. 
    * Fixed an issue where `FMUModel(CS|ME)1.get_author()` returned a byte string, rather than a normal string.
    * Logging will (by default) be explicitly be disabled by calling `fmiSetDebugLogging` 
      and setting `log_level` to `0` when exceeding `set_max_log_size`.
    * Dropping support for Python 3.9 as it is now end of life.
    * Fixed so FMU `reset` resets log size so max log size is per simulation and does not carry over.
    * Fixed a race-condition for calculated diagnostic variables when using ResultDymolaBinary.get_variables_data().

--- PyFMI-2.18.3 ---
    * Fixed a bug introduced in PyFMI 2.18.0 causing incorrect result storing for `boolean` and `enum` variables
      with `result_handling = "binary"` (default).

--- PyFMI-2.18.2 ---
    * Fixed an issue with `ResultDymolaBinary` result retrieval if `dynamic_diagnostics = True` and 
      there is only a single solution point.

--- PyFMI-2.18.1 ---
    * Fixed a caching issue in ResultDymolaBinary.get_variables_data().
    * Removed deprecation of `get_variable_data`, it is recommended to use `get_trajectory` anyways.

--- PyFMI-2.18.0 ---
    * Added new class `DynamicDiagnosticsUtils` in `pyfmi.common.diagnostics` providing