@@ -42,4 +42,4 @@ cdef class FMIODE3(cExplicit_Problem):
     cpdef _set_input_values(self, double t)
     cdef _update_model(self, double t, np.ndarray[double, ndim=1, mode="c"] y)
     cdef int _compare(self, double t, np.ndarray[double, ndim=1, mode="c"] y)
-    cdef object _name_for_eval
+    cdef list _vrefs32_nostate_eval, _vrefs64_nostate_eval
