@@ -1,6 +1,8 @@
 --- CHANGELOG ---
 --- PyFMI-FUTURE ---
     * Fixed so FMU `reset` resets to log level that it was loaded with.
+    * Fixed an issue where models without continuous states could erroneuously succeed simulation,
+      despite evaluation failures after a fixed point in time.
 
 --- PyFMI-2.19.0 ---
     * New function `get_log_categories` for `FMUModelBase2` to retrieve both log 
